buildscript {
    ext {
        springbootVersion = '3.2.0'
        lombokVersion = '1.18.30'
        junitVersion = '5.10.1'
    }
}

plugins {
    id 'java'
    id 'java-library'
    id "org.springframework.boot" version "${springbootVersion}" apply false
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(JavaVersion.VERSION_21.toString())
    }

    targetCompatibility = JavaVersion.VERSION_21
    sourceCompatibility = JavaVersion.VERSION_21
}

group 'xyz.andornot'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven {
        url "https://maven.aliyun.com/nexus/content/groups/public"
    }
}

allprojects {

    apply plugin: 'java-library'

    dependencies {
        api platform("org.springframework.boot:spring-boot-dependencies:${springbootVersion}")

        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
        testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
        testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

        testImplementation enforcedPlatform("org.junit:junit-bom:${junitVersion}")
    }
}

dependencies {
}

test {
    useJUnitPlatform()
}